--- a/json/config.json
+++ b/json/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODg2NzA4ODI4ODM2NjA1OTcy.YT5h8w.XcY4UcK9gaXyZDG2TXNX9A3MNzg",
+    "token": "",
     "prefix": "-",
     "colors": {
         "red": "0xfe2e2e",
