--- a/json/config.json
+++ b/json/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": "YOUR TOKEN SEE README TUTORIAL",
     "prefix": "-",
     "colors": {
         "red": "0xfe2e2e",
